k8s-files/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-lb-service
spec:
  selector:
    app: react
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
