k8s-files/simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-app
        image: mehdiismaaili4656/bags-site:v3.0
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
