k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bagssite.com
      secretName: tls-secret
  rules:
  - host: bagssite.com
    http:
      paths:
      - backend:
          service:
            name: react-service
            port:
              number: 80
        path: /
        pathType: Prefix
